[package]
name = "checkm"
version = "0.2.0"
authors = ["Ben J Woodcroft <donttrustben@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Rust library for CheckM genome assessor"
homepage = "https://github.com/wwood/checkm-rs"
repository = "https://github.com/wwood/checkm-rs"
documentation = "https://github.com/wwood/checkm-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
env_logger = "0.11.*"
csv = "1.1"

[dev-dependencies]
# Run things before commit but not push
cargo-husky = { version="1", default-features = false, features=["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
